Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10819

kiblnd_peer_connect_failed() uses list_add() backwards

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • None
    • None
    • 3
    • 9223372036854775807

      static void
      kiblnd_peer_connect_failed(kib_peer_ni_t *peer_ni, int active, int error)
      ...
              if (list_empty(&peer_ni->ibp_conns)) {
                      /* Take peer_ni's blocked transmits to complete with error */
                      list_add(&zombies, &peer_ni->ibp_tx_queue);
                      list_del_init(&peer_ni->ibp_tx_queue);
      
                      if (kiblnd_peer_active(peer_ni))
                              kiblnd_unlink_peer_locked(peer_ni);
      
                      peer_ni->ibp_error = error;
              } else {
      

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: